src/objects/Order_Status_Alert_Mapping_Management__mdt.object
<CustomObject>
    <fields>
        <fullName>Amber_Image_URL__c</fullName>
        <label>Amber Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Amber__c</fullName>
        <label>Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Image_URL__c</fullName>
        <label>Green Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Green__c</fullName>
        <label>Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Image_Red__c</fullName>
        <label>Red Image Red</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Red__c</fullName>
        <label>Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Status Alert Mapping Management</label>
    <pluralLabel>Order Status Alert Mapping Managements</pluralLabel>
</CustomObject>